--- a/map.css
+++ b/map.css
@@ -85,7 +85,7 @@ form.address_search input[type=text] {
 
 
 .sidenav {
-    height: 100%; 
+    height: 91%; 
     /* Full-height: remove this if you want "auto" height */
     width: 25%; 
     /* Set the width of the sidebar */
@@ -99,7 +99,7 @@ form.address_search input[type=text] {
     color:#000066;
     font-family: Roboto, Arial, sans-serif;
     background-color: white;
-    overflow-y: scroll;
+    overflow-y: auto;
 } 
 #filter_by {
     margin-top: 0px;
@@ -191,7 +191,7 @@ input[type = checkbox]:hover {
     padding-left: 25px; 
     font-size: 14px;
     list-style-type: none;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 .location_checklist_specific:hover { 
     cursor: pointer
@@ -200,7 +200,7 @@ input[type = checkbox]:hover {
     display: none;
 
     /* for when it IS showing... */
-    height: 100%; 
+    height: 91%; 
     /* Full-height: remove this if you want "auto" height */
     width: 25%; 
     /* Set the width of the sidebar */
@@ -215,8 +215,7 @@ input[type = checkbox]:hover {
     color:#000066;
     font-family: Roboto, Arial, sans-serif;
     background-color: white;
-    overflow-y: scroll;
-    overflow-x: auto;
+    overflow-y: auto;
 }
 .location_sidenav ul, .directions_sidenav ul {
     padding-left: 10px;
