--- a/map.css
+++ b/map.css
@@ -601,6 +601,15 @@ h4 {
     cursor: pointer;
 }
 
+@media print {
+    body * {
+        display: none;
+    }
+    body .printable {
+        display: block;
+    }
+}
+
 
 /* Set the size of the div element that contains the map */
 #map {
