--- a/map.css
+++ b/map.css
@@ -51,11 +51,11 @@ form.address_search input[type=text] {
     width: 150%;
     background:#f1f1f1;
 }
-#find_physician {
+#find_a_physician {
     display: inline-block;
-    padding-top: 10px;
-    margin-left: 100px;
-    padding-right: 15%;
+    padding-bottom: 10px;
+    margin-left: 5%;
+    /* padding-right: 15%; */
 }
 #find_physician:link {
     font-size: 17px;
@@ -70,10 +70,11 @@ form.address_search input[type=text] {
     text-decoration: underline;
 } 
 #for_help {
-    /* margin-left: 10px; */
-    padding-left: 5%;
+    margin-left: 5%;
+    /* padding-left: 5%; */
     display: inline-block;
     padding-top: 10px;
+    padding-bottom: 10px;
 } 
 #for_help_text {
     font-size: 17px;
